@@ -28,78 +28,38 @@
 
 package normal.imports;
 
-import java.awt.*;
-import java.io.*;
-import javax.swing.*;
+import java.io.File;
 import normal.Shell;
-import normal.engine.packet.*;
-import normal.options.NormalOptionSet;
-import normal.packetfilter.*;
-import normal.packetui.*;
+import normal.engine.packet.NPacket;
 
 /**
  * An interface through which the user can import a SnapPea
- * triangulation.
- * See <tt>PacketCreator</tt> for further details.
+ * triangulation.  See <tt>Importer</tt> for further details.
  *
- * @see normal.packetui.PacketCreator
+ * @see normal.imports.Importer
  */
-public class SnapPeaImporter implements PacketCreator {
-    /**
-     * The pane that makes up the interface.
-     */
-    private ImportFilePane pane;
-
+public class SnapPeaImporter extends Importer {
     /**
      * Creates a new importer.
      *
      * @param shell the shell representing the entire program.
      */
     public SnapPeaImporter(Shell shell) {
-        pane = new ImportFilePane(shell, null);
+        super(shell, null);
     }
      
-    public Component getCreator() {
-        return pane;
-    }
-
     public String getDialogTitle() {
         return "Import SnapPea Triangulation";
     }
 
-    public PacketFilter getPacketFilter() {
-        return AllowAll.instance;
-    }
-
-    public String getSuggestedPacketLabel() {
-        return "SnapPea Triangulation";
-    }
-
-    public NPacket makeNewPacket(Shell shell, NPacket parent,
-            Dialog parentDialog) {
-        String fileName = pane.getFileName().trim();
-        if (fileName.length() == 0) {
-            shell.error("No file has been selected.");
-            return null;
-        }
-        File file = new File(fileName);
-        try {
-            if (! file.exists()) {
-                shell.error("The file " + file.getAbsolutePath()
-                    + " does not exist.");
-                return null;
-            }
-        } catch (SecurityException e) {}
+    protected NPacket importData(Shell shell, File dataFile) {
         NPacket packet =
-            shell.getEngine().readSnapPea(file.getAbsolutePath());
+            shell.getEngine().readSnapPea(dataFile.getAbsolutePath());
         if (packet == null) {
-            shell.error("An error occurred when attempting to import from "
-                + file.getAbsolutePath() + ".");
+            shell.error("An error occurred whilst attempting to import from "
+                + dataFile.getAbsolutePath() + ".");
             return null;
         }
-        NormalOptionSet options = shell.getOptions();
-        options.setStringOption("LastDir", file.getParent());
-        options.writeToFile();
         return packet;
     }
 }
